--- a/zotero.bib
+++ b/zotero.bib
@@ -269,6 +269,23 @@
   keywords = {economy,ussr}
 }
 
+@misc{rameshHierarchicalTextConditionalImage2022,
+  title = {Hierarchical {{Text-Conditional Image Generation}} with {{CLIP Latents}}},
+  author = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
+  date = {2022-04-12},
+  number = {arXiv:2204.06125},
+  eprint = {2204.06125},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2204.06125},
+  url = {http://arxiv.org/abs/2204.06125},
+  urldate = {2023-02-11},
+  abstract = {Contrastive models like CLIP have been shown to learn robust representations of images that capture both semantics and style. To leverage these representations for image generation, we propose a two-stage model: a prior that generates a CLIP image embedding given a text caption, and a decoder that generates an image conditioned on the image embedding. We show that explicitly generating image representations improves image diversity with minimal loss in photorealism and caption similarity. Our decoders conditioned on image representations can also produce variations of an image that preserve both its semantics and style, while varying the non-essential details absent from the image representation. Moreover, the joint embedding space of CLIP enables language-guided image manipulations in a zero-shot fashion. We use diffusion models for the decoder and experiment with both autoregressive and diffusion models for the prior, finding that the latter are computationally more efficient and produce higher-quality samples.},
+  archiveprefix = {arXiv},
+  file = {/home/razor/Zotero/storage/VDEG2D9T/Ramesh et al. - 2022 - Hierarchical Text-Conditional Image Generation wit.pdf;/home/razor/Zotero/storage/NUANVRLC/2204.html}
+}
+
 @online{SpacedRepetitionReading,
   title = {Spaced Repetition for Reading Inbox},
   url = {https://www.alexeyshmalko.com/20200830012450/},
