--- a/zotero.bib
+++ b/zotero.bib
@@ -41,6 +41,19 @@
   file = {/home/razor/Zotero/storage/YEUD637K/Blum et al. - Foundations of Data Science.pdf}
 }
 
+@online{borrettiEffectiveSpacedRepetition2023,
+  title = {Effective {{Spaced Repetition}}},
+  author = {Borretti, Fernando},
+  date = {2023-04-10T00:00:00+00:00},
+  url = {https://borretti.me/article/effective-spaced-repetition},
+  urldate = {2023-04-10},
+  abstract = {“To flash conviction on the mind.”},
+  langid = {english},
+  organization = {{Fernando Borretti}},
+  keywords = {srs},
+  file = {/home/razor/Zotero/storage/VI2CZI8Q/effective-spaced-repetition.html}
+}
+
 @online{CanCatalinEye2014,
   title = {Can {{Catalin Eye Drops Protect Eyes From Cataracts}}?},
   year = {2/21/2014 6:45:00 PM},
@@ -141,6 +154,14 @@
   file = {/home/razor/Zotero/storage/HJL57V4B/gillen2016.pdf.pdf;/home/razor/Zotero/storage/KAP3GX5U/Gillen et al. - 2016 - Twelve Weeks of Sprint Interval Training Improves .pdf}
 }
 
+@online{GuideIPLayer,
+  title = {Guide to {{IP Layer Network Administration}} with {{Linux}}},
+  url = {http://linux-ip.net/linux-ip/linux-ip-single.html#ch-routing},
+  urldate = {2023-04-09},
+  keywords = {linux,networking,routing},
+  file = {/home/razor/Zotero/storage/7GP4RBHI/linux-ip-single.html}
+}
+
 @article{hochreiterLongShortTermMemory1997,
   title = {Long {{Short-Term Memory}}},
   author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
@@ -169,6 +190,33 @@
   organization = {{Dominik Honnef's website}},
   keywords = {org-mode},
   file = {/home/razor/Zotero/storage/3WPJ4X4L/my-org-roam-workflows-for-taking-notes-and-writing-articles.html}
+}
+
+@online{huangGamePadLearningEnvironment2018,
+  title = {{{GamePad}}: {{A Learning Environment}} for {{Theorem Proving}}},
+  shorttitle = {{{GamePad}}},
+  author = {Huang, Daniel and Dhariwal, Prafulla and Song, Dawn and Sutskever, Ilya},
+  date = {2018-12-21},
+  number = {arXiv:1806.00608},
+  eprint = {arXiv:1806.00608},
+  eprinttype = {arxiv},
+  doi = {10.48550/arXiv.1806.00608},
+  url = {http://arxiv.org/abs/1806.00608},
+  urldate = {2023-04-11},
+  abstract = {In this paper, we introduce a system called GamePad that can be used to explore the application of machine learning methods to theorem proving in the Coq proof assistant. Interactive theorem provers such as Coq enable users to construct machine-checkable proofs in a step-by-step manner. Hence, they provide an opportunity to explore theorem proving with human supervision. We use GamePad to synthesize proofs for a simple algebraic rewrite problem and train baseline models for a formalization of the Feit-Thompson theorem. We address position evaluation (i.e., predict the number of proof steps left) and tactic prediction (i.e., predict the next proof step) tasks, which arise naturally in tactic-based theorem proving.},
+  pubstate = {preprint},
+  keywords = {neural_network,openai,theorem_prooving},
+  file = {/home/razor/Zotero/storage/473R29P6/Huang et al. - 2018 - GamePad A Learning Environment for Theorem Provin.pdf;/home/razor/Zotero/storage/9WSPKLTX/1806.html}
+}
+
+@video{kakteper/proektovd-infoKAKTEPERLzhenauka2023,
+  title = {{{КАК ТЕПЕРЬ}} Лженаука Прочно Обосновалась Во Власти и Обществе {{России}} / {{Александр Панчин}}},
+  editor = {{Как теперь / проект ОВД-Инфо}},
+  date = {2023},
+  url = {https://www.youtube.com/watch?v=i_RuBEPonBg},
+  urldate = {2023-04-14},
+  abstract = {Как лженаука и конспирология становится частью политики России? Почему власти верят в такое количество теорий заговора: от генетического оружия до «кругом враги»? Как все это влияет на общественное мнение и свободу? Что будет с наукой в России дальше из-за изоляции и эмиграции ученых? Новый гость «Как теперь» от ОВД-Инфо —~биолог, писатель, популяризатор науки и член комиссии РАН по Борье с лженаукой Александр Панчин.  Ютуб-канал Александра Панчина: ~~~/~@alexanderpanchin...~~ Лекции и соцсети Панчина: https://scinquisitor.taplink.ws Если вас задержали на акции Пишите: https://t.me/OvdInfoBot  Звоните: 8 800 707-05-28 Все соцсети ОВД-Инфо: https://ovdinfo.taplink.ws  00:00 Биолог Александр Панчин 00:56~Почему людям так легко поверить в теории заговора? 04:26~Как лженаука и конспирология встраиваются в политику России? 10:37~Есть ли в российской власти люди, которые верят в конспирологические теории? 14:45~Как лженаука влияет на общественное мнение в России? 15:53~Война усилила склонность людей верить в конспирологию? 20:48~Боится ли российская власть ученых?~ 24:02~Много ли ученых вернулись в Россию после эмиграции в начале войны? 26:11~Как изоляция России скажется на развитии науки? 28:59~Будут ли чаще транслировать псевдонаучные идеи на государственном уровне? 31:15~Что должно произойти, чтобы ученые начали возвращаться в Россию? 33:11~Что вы сделаете, когда закончится война? \#кактеперь \#овдинфо \#панчин},
+  editortype = {director}
 }
 
 @online{KakUehatKyrgyzstan,
@@ -555,6 +603,20 @@
   organization = {{Forbes.ru}},
   keywords = {emigration},
   file = {/home/razor/Zotero/storage/RRI8BXQ9/478639-vlasti-mongolii-zaavili-o-namerenii-vydavat-vid-na-zitel-stvo-vsem-rossianam.html}
+}
+
+@online{wallossekAMDUEFIWhat2020,
+  title = {{{AMD UEFI Inside}}: {{What}} Is Really behind {{AGESA}}, the {{PSP}} ({{Platform Security Processor}}) and Especially {{ComboPI}}?},
+  shorttitle = {{{AMD UEFI Inside}}},
+  author = {Wallossek, Igor},
+  date = {2020-06-24T04:00+00:00},
+  url = {https://www.igorslab.de/en/inside-amd-bios-what-is-really-hidden-behind-agesa-the-psp-platform-security-processor-and-the-numbers-of-combo-pi/},
+  urldate = {2023-04-14},
+  abstract = {Since there are always questions and some things are often confused, we will give you some insights into AMD-UEFI, what is colloquially called "the BIOS" (although it is no longer correct).},
+  langid = {american},
+  organization = {{igor'sLAB}},
+  keywords = {amd},
+  file = {/home/razor/Zotero/storage/HVQRDCKW/inside-amd-bios-what-is-really-hidden-behind-agesa-the-psp-platform-security-processor-and-the-.html}
 }
 
 @online{WritingSnippets,
