--- a/zotero.bib
+++ b/zotero.bib
@@ -24,7 +24,7 @@
   title = {Annotated {{Bibliography Template}}},
   url = {https://orgmode.org/worg/exporters/anno-bib-template-worg.html},
   urldate = {2023-01-18},
-  keywords = {org-mode},
+  keywords = {emacs,org-mode},
   file = {/home/razor/Zotero/storage/CP8JX8M6/anno-bib-template-worg.html}
 }
 
@@ -110,7 +110,7 @@
   abstract = {Musings},
   langid = {american},
   organization = {{Kristoffer Balintona}},
-  keywords = {org-mode},
+  keywords = {emacs,org-mode},
   file = {/home/razor/Zotero/storage/SMCA43AV/202206141852.html}
 }
 
@@ -175,6 +175,15 @@
   file = {/home/razor/Zotero/storage/7GP4RBHI/linux-ip-single.html}
 }
 
+@article{henryModularizingGHC,
+  title = {Modularizing {{GHC}}},
+  author = {Henry, Sylvain and Ericson, John and Young, Jeffrey M},
+  abstract = {GHC is the de facto main implementation of the Haskell programming language. Over its year history it has served well the needs of pure functional programmers and researchers alike. However, GHC is not exemplary of good large scale system design in a pure function language. Rather ironically, it violates the properties that draw people to functional programming in the first place: immutability, modularity, and composability. These scars have become more noticeable as modern projects currently underway, such as the Haskell Language Server and cross-compilation, aim to fulfill user needs and desires far more diverse than before. We believe a better GHC is possible. We write this paper to properly situate both the current state of GHC’s codebase and that better future state in the design space of large scale, pure, functional systems. Firstly, we document in detail, GHC’s architectural problems, such as low coherence and high coupling of mutable state, and their genesis. Secondly, we describe what we believe to be a superior design, drawing heavily on domain-driven design principles. Lastly, we sketch a plan to get this design implemented iteratively and durably, mentioning interactions with other ongoing refactorings (structured errors, Trees That Grow, etc.). All of this is informed not just by our own experience working on GHC and deep dives into its history, but also by the traditional software engineering literature. The paper is written from an engineering perspective, with the hope that our collection and recapitulation may provide insight into future best practices for other pure functional software engineers.},
+  langid = {english},
+  keywords = {ghc,haskell},
+  file = {/home/razor/Zotero/storage/R37X49SK/Henry et al. - Modularizing GHC.pdf}
+}
+
 @article{hochreiterLongShortTermMemory1997,
   title = {Long {{Short-Term Memory}}},
   author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
@@ -201,7 +210,7 @@
   urldate = {2023-01-18},
   langid = {english},
   organization = {{Dominik Honnef's website}},
-  keywords = {org-mode},
+  keywords = {emacs,org-mode},
   file = {/home/razor/Zotero/storage/3WPJ4X4L/my-org-roam-workflows-for-taking-notes-and-writing-articles.html}
 }
 
@@ -304,6 +313,22 @@
   url = {https://www.youtube.com/watch?v=YruqJtSd5IA},
   urldate = {2023-01-18},
   keywords = {biology}
+}
+
+@online{morrisLevelsAGIOperationalizing2023,
+  title = {Levels of {{AGI}}: {{Operationalizing Progress}} on the {{Path}} to {{AGI}}},
+  shorttitle = {Levels of {{AGI}}},
+  author = {Morris, Meredith Ringel and Sohl-dickstein, Jascha and Fiedel, Noah and Warkentin, Tris and Dafoe, Allan and Faust, Aleksandra and Farabet, Clement and Legg, Shane},
+  date = {2023-11-04},
+  eprint = {2311.02462},
+  eprinttype = {arxiv},
+  eprintclass = {cs},
+  url = {http://arxiv.org/abs/2311.02462},
+  urldate = {2023-11-14},
+  abstract = {We propose a framework for classifying the capabilities and behavior of Artificial General Intelligence (AGI) models and their precursors. This framework introduces levels of AGI performance, generality, and autonomy. It is our hope that this framework will be useful in an analogous way to the levels of autonomous driving, by providing a common language to compare models, assess risks, and measure progress along the path to AGI. To develop our framework, we analyze existing definitions of AGI, and distill six principles that a useful ontology for AGI should satisfy. These principles include focusing on capabilities rather than mechanisms; separately evaluating generality and performance; and defining stages along the path toward AGI, rather than focusing on the endpoint. With these principles in mind, we propose “Levels of AGI” based on depth (performance) and breadth (generality) of capabilities, and reflect on how current systems fit into this ontology. We discuss the challenging requirements for future benchmarks that quantify the behavior and capabilities of AGI models against these levels. Finally, we discuss how these levels of AGI interact with deployment considerations such as autonomy and risk, and emphasize the importance of carefully selecting Human-AI Interaction paradigms for responsible and safe deployment of highly capable AI systems.},
+  langid = {english},
+  pubstate = {preprint},
+  file = {/home/razor/Zotero/storage/Z55G9PXQ/Morris et al. - 2023 - Levels of AGI Operationalizing Progress on the Pa.pdf}
 }
 
 @online{nemecekCoinductiveGuideInductive2023,
